--- a/sass/hero.css
+++ b/sass/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("../img/heromobile.png");
+  background-image: url("../img/heromobileai.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 4rem;
@@ -7,7 +7,7 @@
 
 @media (min-width: 583px) {
   .hero {
-    background-image: url("../img/herodesktop.png");
+    background-image: url("../img/herodesktopai.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 4rem;
@@ -16,7 +16,7 @@
 }
 @media (min-width: 925px) {
   .hero {
-    background-image: url("../img/herodesktop.png");
+    background-image: url("../img/herodesktopai.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 4rem;
@@ -25,7 +25,7 @@
 }
 @media (min-width: 992px) {
   .hero {
-    background-image: url("../img/herodesktop.png");
+    background-image: url("../img/herodesktopai.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 4rem;
@@ -34,7 +34,7 @@
 }
 @media (min-width: 1200px) {
   .hero {
-    background-image: url("../img/herodesktop.png");
+    background-image: url("../img/herodesktopai.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 4rem;
@@ -43,7 +43,7 @@
 }
 @media (min-width: 1650px) {
   .hero {
-    background-image: url("../img/herodesktop.png");
+    background-image: url("../img/herodesktopai.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 4rem;
