--- a/sass/hero.scss
+++ b/sass/hero.scss
@@ -3,27 +3,27 @@
 
 .hero {
     // background-color: red;
-    background-image: url('../img/heromobile.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
+    background-image: url('../img/heromobileai.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
 }
 
 
 @media (min-width: 583px) {
     .hero {
-        background-image: url('../img/herodesktop.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
+        background-image: url('../img/herodesktopai.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
         padding-left: 4rem;
     }
 }
 
 @media (min-width: 925px) {
     .hero {
-        background-image: url('../img/herodesktop.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
+        background-image: url('../img/herodesktopai.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
         padding-left: 1rem;
     }
 }
 
 @media (min-width: 992px) {
     .hero {
-        background-image: url('../img/herodesktop.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
+        background-image: url('../img/herodesktopai.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
         // background-color: pink;
         padding-left: 8rem;
     }
@@ -31,7 +31,7 @@
 
 @media (min-width: 1200px) {
     .hero {
-        background-image: url('../img/herodesktop.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
+        background-image: url('../img/herodesktopai.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
         // background-color: gray;
         padding-left: 10rem;
     }
@@ -39,7 +39,7 @@
 
 @media (min-width: 1650px) {
     .hero {
-        background-image: url('../img/herodesktop.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
+        background-image: url('../img/herodesktopai.png'); background-repeat: no-repeat; background-size: cover; padding-top: 4rem;
         // background-color: black;
     }
 }
