--- a/sass/main.css
+++ b/sass/main.css
@@ -32,6 +32,7 @@
   --bs-gray-900: #212529;
   --bs-beige: #ffffe7;
   --bs-purple: #C585B3;
+  --bs-gray: #292929;
   --bs-primary: red;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
@@ -42,6 +43,7 @@
   --bs-dark: #212529;
   --bs-beige-rgb: 255, 255, 231;
   --bs-purple-rgb: 197, 133, 179;
+  --bs-gray-rgb: 41, 41, 41;
   --bs-primary-rgb: 255, 0, 0;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -2840,6 +2842,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #C585B3;
 }
 
+.btn-gray {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #292929;
+  --bs-btn-border-color: #292929;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #232323;
+  --bs-btn-hover-border-color: #212121;
+  --bs-btn-focus-shadow-rgb: 73, 73, 73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #212121;
+  --bs-btn-active-border-color: #1f1f1f;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #292929;
+  --bs-btn-disabled-border-color: #292929;
+}
+
 .btn-primary {
   --bs-btn-color: #000;
   --bs-btn-bg: red;
@@ -3007,6 +3026,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #C585B3;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #C585B3;
+  --bs-gradient: none;
+}
+
+.btn-outline-gray {
+  --bs-btn-color: #292929;
+  --bs-btn-border-color: #292929;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #292929;
+  --bs-btn-hover-border-color: #292929;
+  --bs-btn-focus-shadow-rgb: 41, 41, 41;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #292929;
+  --bs-btn-active-border-color: #292929;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #292929;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #292929;
   --bs-gradient: none;
 }
 
@@ -4704,6 +4740,15 @@ textarea.form-control-lg {
   color: #5e4056;
 }
 
+.alert-gray {
+  --bs-alert-color: #191919;
+  --bs-alert-bg: #d4d4d4;
+  --bs-alert-border-color: #bfbfbf;
+}
+.alert-gray .alert-link {
+  color: #141414;
+}
+
 .alert-primary {
   --bs-alert-color: #990000;
   --bs-alert-bg: #ffcccc;
@@ -5094,6 +5139,20 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #76506b;
   border-color: #76506b;
+}
+
+.list-group-item-gray {
+  color: #191919;
+  background-color: #d4d4d4;
+}
+.list-group-item-gray.list-group-item-action:hover, .list-group-item-gray.list-group-item-action:focus {
+  color: #191919;
+  background-color: #bfbfbf;
+}
+.list-group-item-gray.list-group-item-action.active {
+  color: #fff;
+  background-color: #191919;
+  border-color: #191919;
 }
 
 .list-group-item-primary {
@@ -6734,6 +6793,11 @@ textarea.form-control-lg {
   background-color: RGBA(197, 133, 179, var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-gray {
+  color: #fff !important;
+  background-color: RGBA(41, 41, 41, var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-primary {
   color: #000 !important;
   background-color: RGBA(255, 0, 0, var(--bs-bg-opacity, 1)) !important;
@@ -6786,6 +6850,13 @@ textarea.form-control-lg {
 }
 .link-purple:hover, .link-purple:focus {
   color: #d19dc2 !important;
+}
+
+.link-gray {
+  color: #292929 !important;
+}
+.link-gray:hover, .link-gray:focus {
+  color: #212121 !important;
 }
 
 .link-primary {
@@ -7273,6 +7344,11 @@ textarea.form-control-lg {
 .border-purple {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-purple-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-gray {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-gray-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-primary {
@@ -8147,6 +8223,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-purple-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-gray {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-gray-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-primary {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
@@ -8246,6 +8327,11 @@ textarea.form-control-lg {
 .bg-purple {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-purple-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-gray {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-gray-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-primary {
@@ -11079,5 +11165,19 @@ textarea.form-control-lg {
   }
 }
 .second-section {
-  padding: 6rem 0rem 6rem 0rem;
-}/*# sourceMappingURL=main.css.map */
+  padding: 10rem 0rem 10rem 0rem;
+}
+
+/*
+.third-section {
+    .container {
+        h1 {
+            margin: 0rem 8rem 0rem 8rem;
+        }
+
+        p {
+            margin-left: 8rem;
+        }
+    }
+}
+*//*# sourceMappingURL=main.css.map */
