--- a/sass/visual.scss
+++ b/sass/visual.scss
@@ -1,3 +1,5 @@
+@import url("main.css");
+
 .piece-title {
     font-size: 3rem;
 }
@@ -16,4 +18,19 @@
     .piece {
         width: 30rem;
     }
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    // color: #C585B3;
+    text-decoration: underline;
+    color: black;
+}
+
+.sub-menu {
+    font-weight: bolder;
 }
