Finished 'reading' page.
Did some other tweaks across the other pages but there are a lot of minor tweaks that need to be made.

--- a/sass/main.css
+++ b/sass/main.css
@@ -11133,6 +11133,11 @@ textarea.form-control-lg {
   font-weight: bold;
 }
 
+a:hover {
+  text-decoration: underline;
+  color: black;
+}
+
 .second-title {
   font-size: 3.5rem;
 }
