--- a/sass/hero.css
+++ b/sass/hero.css
@@ -93,4 +93,9 @@
   color: #000;
   font-size: 1.1rem;
   font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: black;
 }/*# sourceMappingURL=hero.css.map */
