--- a/sass/reading.css
+++ b/sass/reading.css
@@ -10,7 +10,7 @@
 }
 */
 .article-title {
-  font-size: 4rem;
+  font-size: 3.5rem;
 }
 
 .article-paragraph {
@@ -25,8 +25,75 @@
     font-size: 1.5rem;
   }
 }
-@media (min-width: 576px) {
+.articles .container {
+  padding-left: 3rem;
+}
+
+@media (min-width: 1000px) {
   .articles .container {
-    padding-left: 5rem;
+    margin-left: 6rem;
+    width: 75%;
+  }
+}
+@media (min-width: 1200px) {
+  .articles .container {
+    margin-left: 8rem;
+    width: 75%;
+  }
+}
+
+/*
+.articles {
+    .container {
+        @media (min-width: 576px) {
+            margin-left: 8rem;
+            width: 75%;
+        }
+
+        @media (min-width: 768px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+
+        @media (min-width: 992px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+
+        @media (min-width: 1200px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+
+        @media (min-width: 1400px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+    }
+}
+*/
+@media (min-width: 576px) {
+  .hero-img {
+    padding-right: 7rem;
+  }
+}
+@media (min-width: 768px) {
+  .hero-img {
+    padding-right: 0rem;
+  }
+}
+@media (min-width: 992px) {
+  .hero-img {
+    padding-right: 7rem;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-img {
+    padding-right: 7rem;
+  }
+}
+@media (min-width: 1400px) {
+  .hero-img {
+    padding-right: 7rem;
   }
 }/*# sourceMappingURL=reading.css.map */
