--- a/sass/reading.scss
+++ b/sass/reading.scss
@@ -12,7 +12,7 @@
 */
 
 .article-title {
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
 
 .article-paragraph {
@@ -32,8 +32,81 @@
 
 .articles {
     .container {
-        @media (min-width: 576px) {
-            padding-left: 5rem;
+        padding-left: 3rem;        
+    }
+}
+
+.articles {
+    .container {
+        @media (min-width: 1000px) {
+            margin-left: 6rem;
+            width: 75%;
         }
+
+        @media (min-width: 1200px) {
+            margin-left: 8rem;
+            width: 75%;
+        }
+    }
+}
+
+/*
+.articles {
+    .container {
+        @media (min-width: 576px) {
+            margin-left: 8rem;
+            width: 75%;
+        }
+
+        @media (min-width: 768px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+
+        @media (min-width: 992px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+
+        @media (min-width: 1200px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+
+        @media (min-width: 1400px) {
+            margin-left: 11rem;
+            width: 75%;
+        }
+    }
+}
+*/
+
+@media (min-width: 576px) {
+    .hero-img {
+        padding-right: 7rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .hero-img {
+        padding-right: 0rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .hero-img {
+        padding-right: 7rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .hero-img {
+        padding-right: 7rem;
+    }
+}
+
+@media (min-width: 1400px) {
+    .hero-img {
+        padding-right: 7rem;
     }
 }
