Made and linked article pages.

--- a/sass/reading.css
+++ b/sass/reading.css
@@ -26,9 +26,17 @@
   }
 }
 .articles .container {
-  padding-left: 3rem;
+  padding: 3rem;
 }
 
+.articles .container {
+  margin-right: 16rem;
+}
+@media (min-width: 700px) {
+  .articles .container {
+    margin-left: 3rem;
+  }
+}
 @media (min-width: 1000px) {
   .articles .container {
     margin-left: 6rem;
